--- a/startbootstrap-personal-gh-pages/startbootstrap-personal-gh-pages/resume.html
+++ b/startbootstrap-personal-gh-pages/startbootstrap-personal-gh-pages/resume.html
@@ -56,6 +56,7 @@
         }
 
         /* Estilo del botón de cambio de tema */
+        .theme-toggle {
             position: fixed;
             top: 1.5rem;
             right: 1.5rem;
@@ -73,6 +74,7 @@
             justify-content: center;
         }
         @media (max-width: 767px) {
+            .theme-toggle {
                 top: 4rem;
                 right: 1rem;
                 width: 32px;
@@ -172,6 +174,7 @@
                         data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
+                </button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav ms-auto mb-2 mb-lg-0 small fw-bolder">
                         <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
