Add Kali Uchis article page and link

--- a/startbootstrap-personal-gh-pages/startbootstrap-personal-gh-pages/projects.html
+++ b/startbootstrap-personal-gh-pages/startbootstrap-personal-gh-pages/projects.html
@@ -221,6 +221,17 @@
                             <img src="assets/portada-salo.jpg" alt="El juicio de Salomón" class="project-image" />
                         </div>
                     </div>
+                    <div class="project-card-horizontal">
+                        <div class="project-text">
+                            <a href="kali-uchis.html">
+                                <h2 class="fw-bolder">Amor, duelo y libertad: el álbum más íntimo de Kali Uchis</h2>
+                                <p>Kali Uchis se aleja del brillo comercial para ofrecernos su obra más íntima.</p>
+                            </a>
+                        </div>
+                        <div class="project-image-wrapper">
+                            <img src="AQUÍPONLAIMAGEN" alt="Amor, duelo y libertad portada" class="project-image" />
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
