--- a/startbootstrap-personal-gh-pages/startbootstrap-personal-gh-pages/resume.html
+++ b/startbootstrap-personal-gh-pages/startbootstrap-personal-gh-pages/resume.html
@@ -208,7 +208,7 @@
                     <h3>Escribir no fue una decisión</h3>
                     <p>No recuerdo cuándo empecé a escribir, pero sí recuerdo por qué seguí haciéndolo: para no quedarme mudo ante lo que me dolía, para inventar sentido cuando faltaba.</p>
                     <p>Con el tiempo, descubrí que escribir también podía ser un modo de pensar, de cuestionar, de transformar.</p>
-                    <p>Una forma de traducir lo inefable —no con respuestas, sino con preguntas mejores.</p>
+                    <p>Una forma de traducir lo inefable, no con respuestas, sino con preguntas mejores.</p>
                 </div>
                 <div class="about-item">
                     <h3>Todo parte de una pregunta</h3>
