--- a/startbootstrap-personal-gh-pages/startbootstrap-personal-gh-pages/kali-uchis.html
+++ b/startbootstrap-personal-gh-pages/startbootstrap-personal-gh-pages/kali-uchis.html
@@ -88,7 +88,7 @@
         <div class="container px-5 custom-article">
             <h1 class="fw-bolder mb-4"><span class="gradient-title">Amor, duelo y libertad: el álbum más íntimo de Kali Uchis</span></h1>
             <span class="small d-inline-block subtag">Crítica musical</span>
-            <img src="AQUÍPONLAIMAGEN" alt="Portada del álbum" class="obra" style="max-width: 100%; display: block; margin-left: auto; margin-right: auto;" />
+            <img src="sincerely.jpg" alt="Portada del álbum" class="obra" style="max-width: 100%; display: block; margin-left: auto; margin-right: auto;" />
             <p class="lead fw-bold fst-italic">
                 Kali Uchis se aleja del brillo comercial para ofrecernos su obra más íntima: un álbum nacido entre el duelo y la maternidad, donde cada canción respira honestidad. Sincerely no busca complacer, sino acompañar.
             </p>
