--- a/startbootstrap-personal-gh-pages/startbootstrap-personal-gh-pages/projects.html
+++ b/startbootstrap-personal-gh-pages/startbootstrap-personal-gh-pages/projects.html
@@ -223,7 +223,7 @@
                     </div>
                     <div class="project-card-horizontal">
                         <div class="project-text">
-                            <a href="kali-uchis.html">
+                            <a href="sincerely.html">
                                 <h2 class="fw-bolder">Amor, duelo y libertad: el álbum más íntimo de Kali Uchis</h2>
                                 <p>Kali Uchis se aleja del brillo comercial para ofrecernos su obra más íntima.</p>
                             </a>
