fix: unify project image height

--- a/startbootstrap-personal-gh-pages/startbootstrap-personal-gh-pages/projects.html
+++ b/startbootstrap-personal-gh-pages/startbootstrap-personal-gh-pages/projects.html
@@ -142,8 +142,9 @@
         }
         .project-image {
             width: 100%;
-            height: auto;
+            height: 250px;
             border-radius: 0.5rem;
+            object-fit: cover;
         }
         @media (max-width: 768px) {
             .project-card {
