Fix project card image sizing

--- a/startbootstrap-personal-gh-pages/startbootstrap-personal-gh-pages/projects.html
+++ b/startbootstrap-personal-gh-pages/startbootstrap-personal-gh-pages/projects.html
@@ -140,7 +140,7 @@
             flex: 0 0 50%;
             padding: 1rem;
         }
-        .project-image {
+        .project-image-wrapper .project-image {
             width: 100%;
             height: 250px;
             border-radius: 0.5rem;
