--- a/startbootstrap-personal-gh-pages/startbootstrap-personal-gh-pages/projects.html
+++ b/startbootstrap-personal-gh-pages/startbootstrap-personal-gh-pages/projects.html
@@ -191,7 +191,7 @@
                         <div class="project-text">
                             <a href="arte-naturaleza.html">
                                 <h2 class="fw-bolder">Del surrealismo a la crisis ecológica: Arte y naturaleza en diálogo</h2>
-                                <p>Madrid se convierte en un oasis de vitalismo con la exposición “Arte y naturaleza. Un siglo de biomorfismo”...</p>
+                                <p>Madrid se convierte en un oasis de vitalismo con la exposición “Arte y naturaleza. Un siglo de biomorfismo”.</p>
                             </a>
                         </div>
                         <div class="project-image-wrapper">
@@ -215,7 +215,7 @@
                         <div class="project-text">
                             <a href="salomon.html">
                                 <h2 class="fw-bolder">La abnegación más pura: la maternidad</h2>
-                                <p>Es difícil recorrer los pasillos del Thyssen sin detenerse a ver esta dramática escena...</p>
+                                <p>Es difícil recorrer los pasillos del Thyssen sin detenerse a ver esta dramática escena.</p>
                             </a>
                         </div>
                         <div class="project-image-wrapper">
