--- a/startbootstrap-personal-gh-pages/startbootstrap-personal-gh-pages/projects.html
+++ b/startbootstrap-personal-gh-pages/startbootstrap-personal-gh-pages/projects.html
@@ -128,6 +128,7 @@
         .project-text {
             flex: 1;
             padding: 2rem;
+            text-align: left; /* evita la justificación del texto */
         }
         .project-text a {
             color: var(--text-color);
