--- a/startbootstrap-personal-gh-pages/startbootstrap-personal-gh-pages/resume.html
+++ b/startbootstrap-personal-gh-pages/startbootstrap-personal-gh-pages/resume.html
@@ -127,7 +127,7 @@
         }
 
         .card-body div {
-        text-align: justify;
+        text-align: left; /* evita la justificación del texto */
         }
 
         .card-body div:not(:last-child) {
@@ -150,7 +150,7 @@
         }
 
         .about-item p {
-            text-align: justify;
+            text-align: left; /* evita la justificación del texto */
             margin: 0 0 0.5rem 0;
         }
         .about-item p:last-child {
