--- a/startbootstrap-personal-gh-pages/startbootstrap-personal-gh-pages/resume.html
+++ b/startbootstrap-personal-gh-pages/startbootstrap-personal-gh-pages/resume.html
@@ -127,7 +127,7 @@
         }
 
         .card-body div {
-        text-align: justify;
+        text-align: left; /* evita la justificación del texto */
         }
 
         .card-body div:not(:last-child) {
@@ -150,7 +150,7 @@
         }
 
         .about-item p {
-            text-align: justify;
+            text-align: left; /* evita la justificación del texto */
             margin: 0 0 0.5rem 0;
         }
         .about-item p:last-child {
@@ -229,7 +229,7 @@
                         <div class="card border-0 rounded-4 mb-5">
                             <div class="card-body p-5">
                                 <div class="row align-items-center gx-5">
-                                    <div class="col text-center text-lg-start mb-4 mb-lg-0">
+                                    <div class="col text-start mb-4 mb-lg-0">
                                         <div class="bg-light p-4 rounded-4">
                                             <div class="text-primary fw-bolder mb-2">2023 - 2025</div>
                                             <div class="small fw-bolder">Honest Greens</div>
@@ -249,7 +249,7 @@
                         <div class="card shadow border-0 rounded-4 mb-5">
                             <div class="card-body p-5">
                                 <div class="row align-items-center gx-5">
-                                    <div class="col text-center text-lg-start mb-4 mb-lg-0">
+                                    <div class="col text-start mb-4 mb-lg-0">
                                         <div class="bg-light p-4 rounded-4">
                                             <div class="text-secondary fw-bolder mb-2">2021 - 2025</div>
                                             <div class="mb-2">
@@ -272,7 +272,7 @@
                         <div class="card shadow border-0 rounded-4 mb-5">
                             <div class="card-body p-5">
                                 <div class="row align-items-center gx-5">
-                                    <div class="col text-center text-lg-start mb-4 mb-lg-0">
+                                    <div class="col text-start mb-4 mb-lg-0">
                                         <div class="bg-light p-4 rounded-4">
                                             <div class="text-secondary fw-bolder mb-2">2017 - 2019</div>
                                             <div class="mb-2">
