--- a/startbootstrap-personal-gh-pages/startbootstrap-personal-gh-pages/kali-uchis.html
+++ b/startbootstrap-personal-gh-pages/startbootstrap-personal-gh-pages/kali-uchis.html
@@ -85,6 +85,7 @@
             font-weight: 600;
             margin-top: 0;
             margin-bottom: 0.5rem;
+            color: #ffa94d;
         }
         .review-section {
             break-inside: avoid;
@@ -101,9 +102,10 @@
             max-width: 550px;
             margin: 2rem auto;
             padding: 1.5rem;
-            background: #f5f5f5;
-            border: 1px solid #ddd;
+            background: #000;
+            border: 1px solid #444;
             border-radius: 8px;
+            color: #fff;
         }
     </style>
 </head>
