Fix ficha tecnica details

--- a/startbootstrap-personal-gh-pages/startbootstrap-personal-gh-pages/kali-uchis.html
+++ b/startbootstrap-personal-gh-pages/startbootstrap-personal-gh-pages/kali-uchis.html
@@ -191,8 +191,8 @@
                     <li><strong>Productores:</strong> Josh Crocker, Kali Uchis, Tom Henry, Dylan Wiggins</li>
                     <li><strong>Sello:</strong> Capitol Records / Left Music</li>
                     <li><strong>Disponible en:</strong> Spotify, Apple Music, Soundcloud, YouTube</li>
-                    <li><strong>Fecha de publicación:</strong> 9 de may
-                    <li><strong>Géneros:</strong> R&B alternativo, dream pop, soul, psicodelia latina</li>
+                    <li><strong>Fecha de publicación:</strong> 9 de mayo de 2024</li>
+                    <li><strong>Géneros:</strong> R&amp;B alternativo, dream pop, soul, psicodelia latina</li>
                 </ul>
             </div>
         </div>
