Style ficha tecnica box

--- a/startbootstrap-personal-gh-pages/startbootstrap-personal-gh-pages/kali-uchis.html
+++ b/startbootstrap-personal-gh-pages/startbootstrap-personal-gh-pages/kali-uchis.html
@@ -104,6 +104,7 @@
         }
         .tech-card li {
             margin-bottom: 0.25rem;
+        }
         /* --- Estilos editoriales --- */
         .review-content {
             font-family: 'Playfair Display', Georgia, 'Times New Roman', serif;
@@ -183,7 +184,7 @@
                 <p>Entre toques de R&amp;B alternativo y psicodelia latina, las canciones fluyen sin prisa. Es un álbum que pide paciencia y oído atento, un diario musical para escuchar sin urgencias.</p>
             </div>
 
-            <div class="ficha-tecnica">
+            <div class="ficha-tecnica tech-card">
                 <h3 class="text-center mb-3">Ficha técnica</h3>
                 <ul class="list-unstyled mb-0">
                     <li><strong>Título:</strong> Sincerely</li>
@@ -191,8 +192,8 @@
                     <li><strong>Productores:</strong> Josh Crocker, Kali Uchis, Tom Henry, Dylan Wiggins</li>
                     <li><strong>Sello:</strong> Capitol Records / Left Music</li>
                     <li><strong>Disponible en:</strong> Spotify, Apple Music, Soundcloud, YouTube</li>
-                    <li><strong>Fecha de publicación:</strong> 9 de may
-                    <li><strong>Géneros:</strong> R&B alternativo, dream pop, soul, psicodelia latina</li>
+                    <li><strong>Fecha de publicación:</strong> 9 de may</li>
+                    <li><strong>Géneros:</strong> R&amp;B alternativo, dream pop, soul, psicodelia latina</li>
                 </ul>
             </div>
         </div>
