Fix nav bar and add back button on project pages

--- a/startbootstrap-personal-gh-pages/startbootstrap-personal-gh-pages/kali-uchis.html
+++ b/startbootstrap-personal-gh-pages/startbootstrap-personal-gh-pages/kali-uchis.html
@@ -175,6 +175,9 @@
             </div>
         </div>
     </nav>
+
+    <a href="javascript:history.back()" class="btn btn-warning position-fixed top-0 start-0 m-3">&larr; Volver</a>
+
     <section class="py-5">
         <div class="container px-5 custom-article">
             <h1 class="fw-bolder mb-4"><span class="gradient-title">Amor, duelo y libertad: el álbum más íntimo de Kali Uchis</span></h1>
