Fix mobile project preview

--- a/startbootstrap-personal-gh-pages/startbootstrap-personal-gh-pages/index.html
+++ b/startbootstrap-personal-gh-pages/startbootstrap-personal-gh-pages/index.html
@@ -215,6 +215,19 @@
       color: #ccc;
       font-size: 0.9rem;
     }
+    @media (max-width: 767px) {
+      .project-card-preview {
+        height: 200px;
+      }
+
+      .project-card-preview h3 {
+        font-size: 1rem;
+      }
+
+      .project-card-preview p {
+        font-size: 0.8rem;
+      }
+    }
     </style>
 </head>
 <body class="d-flex flex-column h-100">
