--- a/startbootstrap-personal-gh-pages/startbootstrap-personal-gh-pages/index.html
+++ b/startbootstrap-personal-gh-pages/startbootstrap-personal-gh-pages/index.html
@@ -179,16 +179,18 @@
       overflow: hidden;
       border-radius: 1.5rem;
       box-shadow: 0 4px 15px rgba(0, 0, 0, 0.3);
+      width: 100%;
+      padding-top: 75%; /* 4:3 ratio */
+      display: block;
     }
     .project-card-preview img {
+      position: absolute;
+      inset: 0;
       width: 100%;
       height: 100%;
       object-fit: cover;
       transition: transform 0.3s ease;
       display: block;
-    }
-    .project-card-preview:hover img {
-      transform: scale(1.05);
     }
     .project-card-preview .overlay {
       position: absolute;
@@ -203,6 +205,9 @@
       opacity: 0;
       transition: opacity 0.3s ease;
     }
+    .project-card-preview:hover img {
+      transform: scale(1.05);
+    }
     .project-card-preview:hover .overlay {
       opacity: 1;
     }
@@ -214,6 +219,27 @@
     .project-card-preview p {
       color: #ccc;
       font-size: 0.9rem;
+    }
+
+    .project-swiper {
+      overflow: visible;
+    }
+    .swiper-button-next,
+    .swiper-button-prev {
+      color: #FF7A00 !important;
+      z-index: 20;
+    }
+    @media (min-width: 1280px) {
+      .swiper-button-prev { left: -60px; }
+      .swiper-button-next { right: -60px; }
+    }
+    @media (min-width: 768px) and (max-width: 1279px) {
+      .swiper-button-prev { left: -40px; }
+      .swiper-button-next { right: -40px; }
+    }
+    @media (max-width: 767px) {
+      .swiper-button-next,
+      .swiper-button-prev { display: none; }
     }
     @media (max-width: 767px) {
       .project-card-preview {
@@ -302,7 +328,7 @@
                     </h2>
                 </div>
 
-                <div class="swiper project-swiper">
+                <div class="swiper project-swiper" role="region" aria-label="Carrusel de proyectos" aria-live="polite">
                     <div class="swiper-wrapper">
                         <div class="swiper-slide">
                             <a href="arte-naturaleza.html" class="project-card-preview">
@@ -341,8 +367,8 @@
                             </a>
                         </div>
                     </div>
-                    <div class="swiper-button-prev"></div>
-                    <div class="swiper-button-next"></div>
+                    <div class="swiper-button-prev" aria-label="Anterior"></div>
+                    <div class="swiper-button-next" aria-label="Siguiente"></div>
                 </div>
 
                 <div class="ver-todos-container mt-4">
@@ -431,6 +457,10 @@
     <script>
         const projectSwiper = new Swiper('.project-swiper', {
             loop: true,
+            autoplay: {
+                delay: 4000,
+                disableOnInteraction: false
+            },
             navigation: {
                 nextEl: '.swiper-button-next',
                 prevEl: '.swiper-button-prev',
