--- a/startbootstrap-personal-gh-pages/startbootstrap-personal-gh-pages/index.html
+++ b/startbootstrap-personal-gh-pages/startbootstrap-personal-gh-pages/index.html
@@ -274,6 +274,7 @@
                         <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
                         <li class="nav-item"><a class="nav-link" href="resume.html">Resumen - CV</a></li>
                         <li class="nav-item"><a class="nav-link" href="projects.html">Proyectos</a></li>
+                    <li class="nav-item"><a class="nav-link" href="diario/">Diario de un escritor perdido</a></li>
                         <li class="nav-item"><a class="nav-link" href="contact.html">Contacto</a></li>
                     </ul>
                 </div>
@@ -429,6 +430,14 @@
         </section>
 
 
+    <section class="py-5">
+        <div class="container px-5 text-center">
+            <h2 class="display-5 fw-bolder"><span class="text-gradient d-inline">Diario de un escritor perdido</span></h2>
+            <div id="diary-teaser" class="text-start mt-4"></div>
+            <a class="btn btn-outline-dark px-4 py-2 mt-4" href="diario/">Leer el diario completo</a>
+        </div>
+    </section>
+
     <!-- Footer-->
     <footer class="py-4 mt-auto">
         <div class="container px-5">
@@ -474,6 +483,8 @@
         });
     </script>
     <!-- Word cycling script -->
+    <script src="js/diario-entries.js"></script>
+    <script src="js/diario-teaser.js"></script>
     <script src="js/word-cycle.js"></script>
 
 </body>
