Render diary entries as Markdown

--- a/startbootstrap-personal-gh-pages/startbootstrap-personal-gh-pages/index.html
+++ b/startbootstrap-personal-gh-pages/startbootstrap-personal-gh-pages/index.html
@@ -440,6 +440,7 @@
         });
     </script>
     <!-- Word cycling script -->
+    <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
     <script src="js/diario-entries.js"></script>
     <script src="js/diario-teaser.js"></script>
     <script src="js/word-cycle.js"></script>
