--- a/startbootstrap-personal-gh-pages/startbootstrap-personal-gh-pages/diario/index.html
+++ b/startbootstrap-personal-gh-pages/startbootstrap-personal-gh-pages/diario/index.html
@@ -22,6 +22,7 @@
             --section-bg-light: #f8f9fa;
             --btn-outline-border: #000000;
             --caption-color: #6c757d;
+            --bs-body-bg: var(--bg-color);
         }
         [data-theme="dark"] {
             --bg-color: #121212;
@@ -31,6 +32,7 @@
             --section-bg-light: #1e1e1e;
             --btn-outline-border: #ffffff;
             --caption-color: #adb5bd;
+            --bs-body-bg: var(--bg-color);
         }
         body {
             margin: 0;
@@ -47,7 +49,7 @@
     </style>
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-white py-3">
+    <nav class="navbar navbar-expand-lg navbar-dark py-3">
         <div class="container px-5">
             <a class="navbar-brand" href="../index.html"><span class="fw-bolder text-primary">Rick Grisales</span></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -103,6 +105,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="../js/scripts.js"></script>
     <script src="../js/dark-mode.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
     <script src="../js/diario-entries.js"></script>
     <script src="../js/diario.js"></script>
 </body>
