--- a/startbootstrap-personal-gh-pages/startbootstrap-personal-gh-pages/diario/index.html
+++ b/startbootstrap-personal-gh-pages/startbootstrap-personal-gh-pages/diario/index.html
@@ -22,6 +22,7 @@
             --section-bg-light: #f8f9fa;
             --btn-outline-border: #000000;
             --caption-color: #6c757d;
+            --bs-body-bg: var(--bg-color);
         }
         [data-theme="dark"] {
             --bg-color: #121212;
@@ -31,23 +32,39 @@
             --section-bg-light: #1e1e1e;
             --btn-outline-border: #ffffff;
             --caption-color: #adb5bd;
+            --bs-body-bg: var(--bg-color);
         }
         body {
             margin: 0;
             padding: 0;
             font-family: 'Plus Jakarta Sans', sans-serif;
-            background-color: var(--bg-color);
+            background-color: var(--bg-color) !important;
             color: var(--text-color);
             transition: background-color 0.3s, color 0.3s;
         }
-        .navbar, .footer { background-color: var(--bg-color) !important; }
+        .navbar, .footer, header, main, section { background-color: var(--bg-color) !important; }
         .bg-light { background-color: var(--section-bg-light) !important; }
         .nav-link { color: var(--nav-link-color) !important; }
         .text-muted { color: var(--muted-text-color) !important; }
+
+        /* Typography for diary entries */
+        #diary-entries article { margin-bottom: 2rem; }
+        #diary-entries .diary-title { font-size: 3rem; font-weight: 700; margin-bottom: 1rem; }
+        #diary-entries .diary-date { font-size: 0.875rem; color: var(--muted-text-color); }
+        #diary-entries h2 { font-size: 1.75rem; margin-top: 2rem; margin-bottom: 1rem; }
+        #diary-entries h3 { font-size: 1.5rem; margin-top: 2rem; margin-bottom: 1rem; }
+        #diary-entries p { line-height: 1.75; margin-bottom: 1rem; }
+        #diary-entries blockquote {
+            border-left: 4px solid var(--muted-text-color);
+            padding-left: 1rem;
+            font-style: italic;
+            color: var(--muted-text-color);
+            margin: 1.5rem 0;
+        }
     </style>
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-white py-3">
+    <nav class="navbar navbar-expand-lg navbar-dark py-3">
         <div class="container px-5">
             <a class="navbar-brand" href="../index.html"><span class="fw-bolder text-primary">Rick Grisales</span></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -103,6 +120,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="../js/scripts.js"></script>
     <script src="../js/dark-mode.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
     <script src="../js/diario-entries.js"></script>
     <script src="../js/diario.js"></script>
 </body>
