Fix writer's diary: content restore, dark theme, monthly 2-col grid, working search, clean routes

--- a/startbootstrap-personal-gh-pages/startbootstrap-personal-gh-pages/index.html
+++ b/startbootstrap-personal-gh-pages/startbootstrap-personal-gh-pages/index.html
@@ -274,7 +274,7 @@
                         <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
                         <li class="nav-item"><a class="nav-link" href="resume.html">Resumen - CV</a></li>
                         <li class="nav-item"><a class="nav-link" href="projects.html">Proyectos</a></li>
-                    <li class="nav-item"><a class="nav-link" href="diario/">Diario de un escritor perdido</a></li>
+                    <li class="nav-item"><a class="nav-link" href="diary/">Diario de un escritor perdido</a></li>
                         <li class="nav-item"><a class="nav-link" href="contact.html">Contacto</a></li>
                     </ul>
                 </div>
@@ -391,7 +391,7 @@
         <div class="container px-5 text-center">
             <h2 class="display-5 fw-bolder"><span class="text-gradient d-inline">Diario de un escritor perdido</span></h2>
             <div id="diary-teaser" class="text-start mt-4"></div>
-            <a class="btn btn-outline-dark px-4 py-2 mt-4" href="diario/">Leer el diario completo</a>
+            <a class="btn btn-outline-dark px-4 py-2 mt-4" href="diary/">Leer el diario completo</a>
         </div>
     </section>
 
@@ -441,8 +441,8 @@
     </script>
     <!-- Word cycling script -->
     <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
-    <script src="js/diario-entries.js"></script>
-    <script src="js/diario-teaser.js"></script>
+    <script src="js/diary-utils.js"></script>
+    <script src="js/diary-teaser.js"></script>
     <script src="js/word-cycle.js"></script>
 
 </body>
