--- a/startbootstrap-personal-gh-pages/startbootstrap-personal-gh-pages/diary/index.html
+++ b/startbootstrap-personal-gh-pages/startbootstrap-personal-gh-pages/diary/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <meta name="description" content="Notas breves y pensamientos de Rick Grisales" />
     <meta name="author" content="Rick Grisales" />
-    <title>Diary of a Lost Writer - Rick Grisales</title>
+    <title>Diario de un escritor perdido - Rick Grisales</title>
     <link rel="canonical" href="/diary/" />
     <link rel="icon" type="image/x-icon" href="../assets/orange.ico" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -35,7 +35,7 @@
 
     <main class="container px-5">
         <header class="py-5 text-center">
-            <h1 class="display-5 fw-bolder diary-header"><span class="text-gradient d-inline">Diary of a Lost Writer</span></h1>
+            <h1 class="display-5 fw-bolder diary-header"><span class="text-gradient d-inline">Diario de un escritor perdido</span></h1>
             <p class="lead fw-normal text-muted mb-4">Pensamientos sueltos en busca de hogar.</p>
             <div class="mx-auto" style="max-width: 400px;">
                 <input type="search" id="diary-search" class="form-control" placeholder="Search..." aria-label="Buscar en el diario" />
