Restore contact form submit button

--- a/startbootstrap-personal-gh-pages/startbootstrap-personal-gh-pages/contact.html
+++ b/startbootstrap-personal-gh-pages/startbootstrap-personal-gh-pages/contact.html
@@ -181,6 +181,7 @@
                                 <input type="hidden" name="_captcha" value="false">
                                 <!-- Submit Button -->
                                 <div class="d-grid">
+                                    <button class="btn btn-primary btn-lg" type="submit">Enviar</button>
                                 </div>
                             </form>
                         </div>
