--- a/startbootstrap-personal-gh-pages/startbootstrap-personal-gh-pages/gracias.html
+++ b/startbootstrap-personal-gh-pages/startbootstrap-personal-gh-pages/gracias.html
@@ -1,119 +1,24 @@
 <!DOCTYPE html>
-<html lang="en" data-theme="dark">
+<html lang="en">
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <meta name="description" content="Gracias por tu mensaje" />
     <meta name="author" content="Rick Grisales" />
+    <meta id="theme-color" name="theme-color" content="#ffffff" />
     <title>Gracias - Rick Grisales</title>
     <link rel="icon" type="image/x-icon" href="assets/orange.ico" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css" rel="stylesheet" />
+    <script>
+        const storedTheme = localStorage.getItem('theme');
+        if (storedTheme === 'dark') {
+            document.documentElement.classList.add('dark-mode');
+        }
+    </script>
     <link href="css/styles.css" rel="stylesheet" />
-    <style>
-        /* Variables de color */
-        :root {
-            --bg-color: #ffffff;  /* Fondo claro */
-            --text-color: #000000; /* Texto oscuro */
-            --muted-text-color: #6c757d; /* Texto muted en modo claro */
-            --nav-link-color: #000000; /* Color de los enlaces del menú en modo claro */
-            --section-bg-light: #f8f9fa; /* Fondo de secciones claras */
-            --btn-outline-border: #000000; /* Borde del botón outline en modo claro */
-            --caption-color: #6c757d; /* Color de los pies de página en modo claro */
-        }
-        [data-theme="dark"] {
-            --bg-color: #121212;   /* Fondo oscuro */
-            --text-color: #ffffff; /* Texto claro */
-            --muted-text-color: #adb5bd; /* Texto muted en modo oscuro */
-            --nav-link-color: #ffa94d; /* Color de los enlaces del menú en modo oscuro (naranja) */
-            --section-bg-light: #1e1e1e; /* Fondo de secciones claras en modo oscuro */
-            --btn-outline-border: #ffffff; /* Borde del botón outline en modo oscuro */
-            --caption-color: #adb5bd; /* Color de los pies de página en modo oscuro */
-        }
-
-        /* Reset de fondos y colores */
-        body {
-            margin: 0;
-            padding: 0;
-            font-family: 'Plus Jakarta Sans', sans-serif;
-            background-color: var(--bg-color);
-            color: var(--text-color);
-            transition: background-color 0.3s, color 0.3s;
-        }
-        .navbar, .footer {
-            background-color: var(--bg-color) !important;
-        }
-        .bg-light {
-            background-color: var(--section-bg-light) !important;
-        }
-
-        /* Estilo del botón de cambio de tema */
-            position: fixed;
-            top: 1.5rem;
-            right: 1.5rem;
-            background: rgba(255, 255, 255, 0.1);
-            border: none;
-            border-radius: 8px;
-            width: 36px;
-            height: 36px;
-            font-size: 1.2rem;
-            color: var(--text-color);
-            cursor: pointer;
-            z-index: 999;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-        }
-        @media (max-width: 767px) {
-                top: 4rem;
-                right: 1rem;
-                width: 32px;
-                height: 32px;
-                font-size: 1rem;
-            }
-        }
-
-        /* Ajustes para el menú desplegable */
-        .navbar-collapse {
-            z-index: 1000;
-        }
-        .nav-link {
-            color: var(--nav-link-color) !important;
-        }
-        .navbar-toggler {
-            border-color: var(--text-color);
-        }
-        .navbar-toggler-icon {
-            background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30 30'%3e%3cpath stroke='rgba(255, 169, 77, 1)' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e");
-        }
-
-        /* Ajustes para elementos específicos */
-        .text-muted {
-            color: var(--muted-text-color) !important;
-        }
-        .text-gradient {
-            background: linear-gradient(to right, #ff8a00, #e52e71);
-            -webkit-background-clip: text;
-            -webkit-text-fill-color: transparent;
-        }
-        .btn-outline-dark {
-            color: var(--text-color);
-            border-color: var(--btn-outline-border);
-        }
-        .btn-outline-dark:hover {
-            background-color: var(--text-color);
-            color: var(--bg-color);
-        }
-        .footer a {
-            color: var(--caption-color);
-            text-decoration: none;
-        }
-        .footer a:hover {
-            color: var(--nav-link-color);
-        }
-    </style>
 </head>
 <body class="d-flex flex-column h-100">
     <main class="flex-shrink-0">
@@ -131,6 +36,7 @@
                         <li class="nav-item"><a class="nav-link" href="projects.html">Proyectos</a></li>
                     <li class="nav-item"><a class="nav-link" href="diary/">Diario de un escritor perdido</a></li>
                         <li class="nav-item"><a class="nav-link" href="contact.html">Contacto</a></li>
+                    <li class="nav-item"><button id="theme-toggle" class="btn btn-link nav-link px-2" aria-label="Toggle color theme"><span id="theme-icon" aria-hidden="true">🌙</span></button></li>
                     </ul>
                 </div>
             </div>
@@ -175,5 +81,6 @@
     <!-- Scripts -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="js/scripts.js"></script>
+    <script src="js/theme.js"></script>
 </body>
 </html>
