--- a/startbootstrap-personal-gh-pages/startbootstrap-personal-gh-pages/kali-uchis.html
+++ b/startbootstrap-personal-gh-pages/startbootstrap-personal-gh-pages/kali-uchis.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="es" data-theme="dark">
+<html lang="es">
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -9,153 +9,15 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans&family=Playfair+Display:wght@400;600&display=swap" rel="stylesheet" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" />
+    <meta id="theme-color" name="theme-color" content="#ffffff" />
+    <script>
+        const storedTheme = localStorage.getItem('theme');
+        if (storedTheme === 'dark') {
+            document.documentElement.classList.add('dark-mode');
+        }
+    </script>
     <link href="css/styles.css" rel="stylesheet" />
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&display=swap" rel="stylesheet" />
-    <style>
-        :root {
-            --bg-color: #ffffff;
-            --text-color: #000000;
-            --muted-text-color: #6c757d;
-            --nav-link-color: #000000;
-            --section-bg-light: #f8f9fa;
-            --btn-outline-border: #000000;
-            --caption-color: #6c757d;
-        }
-        [data-theme="dark"] {
-            --bg-color: #121212;
-            --text-color: #ffffff;
-            --muted-text-color: #adb5bd;
-            --nav-link-color: #ffa94d;
-            --section-bg-light: #1e1e1e;
-            --btn-outline-border: #ffffff;
-            --caption-color: #adb5bd;
-        }
-        body {
-            margin: 0;
-            padding: 0;
-            font-family: 'Plus Jakarta Sans', sans-serif;
-            background-color: var(--bg-color);
-            color: var(--text-color);
-            transition: background-color 0.3s, color 0.3s;
-        }
-        .navbar, .footer {
-            background-color: var(--bg-color) !important;
-        }
-        .custom-article {
-            background-color: var(--bg-color);
-            padding: 2rem;
-        }
-        .nav-link { color: var(--nav-link-color) !important; }
-        .navbar-toggler { border-color: var(--text-color); }
-        .navbar-toggler-icon {
-            background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30 30'%3e%3cpath stroke='rgba(255, 169, 77, 1)' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e");
-        }
-        .gradient-title {
-            color: var(--text-color);
-            font-weight: 700;
-            display: inline-block;
-            border-bottom: 4px solid #ffa94d;
-            padding-bottom: 0.2em;
-        }
-        .obra {
-            border-radius: 10px;
-            margin: 1rem 0;
-            width: 100%;
-            height: auto;
-        }
-        .footer a { color: var(--caption-color); text-decoration: none; }
-        .footer a:hover { color: var(--nav-link-color); }
-        .review-body {
-            font-family: 'Playfair Display', Georgia, serif;
-            font-size: 1.1rem;
-            line-height: 1.6;
-            column-count: 1;
-            column-gap: 2rem;
-            margin-top: 1rem;
-        }
-        @media (min-width: 992px) {
-            .review-body { column-count: 2; }
-        }
-        .section-heading {
-            font-variant: small-caps;
-            color: var(--muted-text-color);
-            font-weight: 600;
-            margin-top: 1.5rem;
-            margin-bottom: 0.5rem;
-            letter-spacing: 0.05em;
-        }
-        .special-quote {
-            font-style: italic;
-            font-size: 1.2rem;
-            margin: 1.5rem 0;
-            padding-left: 1rem;
-            border-left: 3px solid var(--muted-text-color);
-        }
-        .tech-card {
-            background-color: var(--section-bg-light);
-            border: 1px solid var(--muted-text-color);
-            border-radius: 0.5rem;
-            max-width: 600px;
-            margin: 2rem auto;
-            padding: 1rem;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-        }
-        .tech-card ul {
-            padding-left: 1rem;
-            margin: 0;
-        }
-        .tech-card li {
-            margin-bottom: 0.25rem;
-        }
-        [data-theme="dark"] .tech-card {
-            background-color: #262626;
-            border-color: #333;
-        }
-        /* --- Estilos editoriales --- */
-        .review-content {
-            font-family: 'Playfair Display', Georgia, 'Times New Roman', serif;
-            line-height: 1.6;
-        }
-        .review-content p {
-            margin-bottom: 1rem;
-        }
-        .review-content blockquote {
-            font-style: italic;
-            border-left: 3px solid #ccc;
-            padding-left: 1rem;
-            margin: 1rem 0;
-        }
-        .review-section h2 {
-            font-family: 'Playfair Display', Georgia, 'Times New Roman', serif;
-            font-variant: small-caps;
-            font-weight: 600;
-            margin-top: 0;
-            margin-bottom: 0.5rem;
-        }
-        .review-section {
-            break-inside: avoid;
-            margin-bottom: 1.5rem;
-        }
-        @media (min-width: 992px) {
-            .review-content {
-                column-count: 2;
-                column-gap: 2rem;
-            }
-        }
-
-        .ficha-tecnica {
-            max-width: 550px;
-            margin: 2rem auto;
-            padding: 1.5rem;
-            background: #f5f5f5;
-            border: 1px solid #ddd;
-            border-radius: 8px;
-          }
-        [data-theme="dark"] .ficha-tecnica {
-            background: #262626;
-            border-color: #333;
-        }
-    </style>
 </head>
 <body class="d-flex flex-column h-100">
 <main class="flex-shrink-0">
@@ -172,7 +34,8 @@
                     <li class="nav-item"><a class="nav-link" href="projects.html">Proyectos</a></li>
                     <li class="nav-item"><a class="nav-link" href="diary/">Diario de un escritor perdido</a></li>
                     <li class="nav-item"><a class="nav-link" href="contact.html">Contacto</a></li>
-                </ul>
+                <li class="nav-item"><button id="theme-toggle" class="btn btn-link nav-link px-2" aria-label="Toggle color theme"><span id="theme-icon" aria-hidden="true">🌙</span></button></li>
+                    </ul>
             </div>
         </div>
     </nav>
@@ -231,5 +94,6 @@
     </div>
 </footer>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
+<script src="js/theme.js"></script>
 </body>
 </html>
